[gd_scene load_steps=11 format=2]

[ext_resource path="res://nodes/SpeechBubble/SpeechBubble.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/speech_bubble/normal_bubble.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/speech_bubble/think_bubble.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/speech_bubble/normal_arrow.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/speech_bubble/think_arrow.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/MonospaceTypewriter.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/speech_bubble/dialog_close.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/speech_bubble/dialog_continue.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="SpeechBubble" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
normal_bubble = ExtResource( 2 )
think_bubble = ExtResource( 3 )
normal_arrow = ExtResource( 4 )
think_arrow = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Arrow" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.17
margin_top = 57.84
margin_right = -157.17
margin_bottom = 143.84
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.774
margin_top = -75.0
margin_right = 249.226
margin_bottom = 75.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 60, 60 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Text" type="Label" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOREM IPSUM DOLOR SIT AMET LOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMETLOREM IPSUM DOLOR SIT AMET"
align = 1
valign = 1
autowrap = true
max_lines_visible = 5

[node name="NinePatchRect" type="NinePatchRect" parent="Background"]
self_modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
margin_top = -25.0
margin_right = 211.0
margin_bottom = 15.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 60, 60 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="Background/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jonh"
align = 1
valign = 1
uppercase = true

[node name="ActionIndicators" type="Control" parent="Background"]
margin_left = 455.827
margin_top = 139.998
margin_right = 455.827
margin_bottom = 139.998
__meta__ = {
"_edit_group_": true
}

[node name="CloseSquare" type="TextureRect" parent="Background/ActionIndicators"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 7 )

[node name="ContinueArrow" type="TextureRect" parent="Background/ActionIndicators"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 8 )
stretch_mode = 3

[node name="ActionTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
